# securechat

./: .gitignore  .gitpod.yml  ChangeLog  Dockerfile  Makefile.in  README  README.md  changelog  configure  configure.ac  control  copyright  makefile.aix.rpm  makefile.deb  securechat.1  securechat.spec.in
include/: chat.h  config.h.in
src/: Makefile.am  Makefile.in  chat.c  chatUtils.c
